tests/transpiler/x/rs/group_by_conditional_sum.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
use std::collections::HashMap;
#[derive(Clone)]
struct Group<K, V> { key: K, items: Vec<V> }
#[derive(Debug, Clone)]
struct ItemsItem {
    cat: String,
    val: i64,
    flag: bool,
}
impl std::fmt::Display for ItemsItem {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"cat\": \"{}\"", self.cat)?;
        write!(f, ", ")?;
        write!(f, "\"val\": {}", self.val)?;
        write!(f, ", ")?;
        write!(f, "\"flag\": {}", self.flag)?;
        write!(f, "}}")
    }
}

#[derive(Debug, Clone)]
struct QueryItem {
    cat: String,
    share: i64,
}
impl std::fmt::Display for QueryItem {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"cat\": \"{}\"", self.cat)?;
        write!(f, ", ")?;
        write!(f, "\"share\": {}", self.share)?;
        write!(f, "}}")
    }
}

fn main() {
    let items: Vec<ItemsItem> = vec![ItemsItem {cat: String::from("a"), val: 10, flag: true}, ItemsItem {cat: String::from("a"), val: 5, flag: false}, ItemsItem {cat: String::from("b"), val: 20, flag: true}];
    let result: Vec<QueryItem> = { let mut _q: Vec<QueryItem> = Vec::new(); let mut _tmp: Vec<(Group<String, ItemsItem>, QueryItem)> = Vec::new(); let mut _groups: HashMap<String, Group<String, ItemsItem>> = HashMap::new(); let mut _order: Vec<String> = Vec::new(); for i in &items { let key = i.cat.clone(); let ks = format!("{:?}", &key); let e = _groups.entry(ks.clone()).or_insert_with(|| { _order.push(ks.clone()); Group::<String, ItemsItem> { key: key.clone(), items: Vec::new() } }); e.items.push(i.clone()); } for ks in _order { let g = &_groups[&ks]; _tmp.push((g.key.clone(), QueryItem {cat: String::from(g.key.clone()), share: ({ let mut _q: Vec<i64> = Vec::new(); for x in g.items.clone() { _q.push(if x.flag { x.val } else { 0 }); } _q }.iter().sum::<i64>() / { let mut _q: Vec<i64> = Vec::new(); for x in g.items.clone() { _q.push(x.val); } _q }.iter().sum::<i64>())})); } _tmp.sort_by(|a,b| a.0.partial_cmp(&b.0).unwrap()); for (_,v) in _tmp { _q.push(v); } _q };
    println!("{}", { let tmp = result; tmp.iter().map(|x| x.to_string()).collect::<Vec<_>>().join(" ") });
}
